--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "tsc": "tsc --noEmit",
-    "format": "prettier \"**/*.{ts,tsx,js,json}\" --ignore-path .gitignore",
+    "format": "prettier '**/*.{ts,tsx,js,json}' --ignore-path .gitignore",
     "format:check": "npm run format --check",
     "format:write": "npm run format --write",
-    "validate": "npm format:write && npm lint && npm tsc"
-
+    "validate": "npm run format:write && npm run lint && npm run tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -28,6 +28,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "husky": "^8.0.0"
   }
 }
