--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
- 
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,23 +12,24 @@
     "format:check": "pnpm format --check",
     "format:write": "pnpm format --write",
     "validate": "pnpm format:write  && pnpm lint && pnpm tsc && pnpm build",
-    
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^20.16.12",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
-    "postcss": "^8",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
